# 06_NN_metacam

./: .gitignore  PhaseCam_Simul_RealScale_Adam_SASM_5700px_240915.ipynb  README.md  pyproject.toml
configs/: paths.yaml
configs/simulation/: base.yaml  test512.yaml
configs/training/: base.yaml  direct_fullspeckle512.yaml  unet512.yaml  unrolled512.yaml
fieldprop/: Data_load.py  MetaOperator.py  NPCC.py  PhaseCamFunctions.py  __init__.py  fieldprop.py  functions.py  functions_YS.py  lossfuncitions.py  np_matfun.py  torch_matfun.py
metacam/: __init__.py
scripts/: benchmark_reconstruction.py  eval_phasecam_nn.py  generate_metacam_mask.py  posttrain_phasecam_report.py  run_phasecam_realscale_test.py  smoke_check.py  train_phasecam_direct.py  train_phasecam_unet.py  train_phasecam_unrolled.py
src/metacam/: __init__.py
src/metacam/data/: __init__.py  io.py  synthetic_phase_dataset.py
src/metacam/metrics/: __init__.py  losses.py  npcc.py
src/metacam/nn/: __init__.py  baselines.py  direct_fullspeckle.py  phasecam_realscale.py  physics_unrolled.py  reconstruction.py  train_utils.py  unet_small.py
src/metacam/ops/: __init__.py  numpy_ops.py  torch_ops.py
src/metacam/patterns/: __init__.py  encoding.py  encoding_ys.py
src/metacam/physics/: __init__.py  meta_operator.py  phasecam_forward.py  propagation.py
src/metacam/vision/: __init__.py  phasecam.py
tests/: test_direct_fullspeckle.py  test_imports.py  test_nn_forward.py  test_physics_unrolled_shapes.py  test_reduced_config.py  test_synthetic_dataset.py
(+1 files in other folders)
